Fix navbar to top of viewport: Add height to body element; Add column flex-box with height of 100%; Add overflow to main;

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,11 @@ body {
 }
 
 #menu-items {
+    display: flex;
+    justify-content: space-evenly;
     list-style: none;
+    font-size: 1.2rem;
+    padding: var(--outer-md);
 }
 
 .nav-link {
@@ -63,8 +67,6 @@ main {
 
 }
 
-
-
 section {
     height: 100vh;
 
@@ -72,10 +74,9 @@ section {
 
 
 @media only screen and (min-width: 700px) {
-    #navbar {
-        min-width: 17rem;
-        padding: unset;
-        border-right: 2px solid;
-        border-bottom: unset;
+    #menu-items {
+        justify-content: end;
+        gap: var(--outer-xl);
+        padding: var(--outer-md) var(--outer-lg);
     }
 }
